CXO-2951 - Universal protocols part 1
Backported caching & streaming from the Connexo protocols

 - Offline version of a message attribute of type FirmwareVersion now only contains the path to a temp file representing the firmware file, instead of the full file contents.
 - The format of such an attribute should do nothing extra, just return the path (String) as is
 - The protocol implementations have changed to handle the attribute value as a path (and load/stream the file content)

 - Note that other DeviceMessageFile's remain exactly the same, no streaming nor caching is applied there.